test-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /k8s-testing-app
        backend:
          serviceName: k8s-testing-app-javascript
          servicePort: 3000
