test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-k8s-testing-app
  namespace: k8s-testing-app
spec:
  rules:
  - host: nginx.k8s.domainsecurity.cc
    http:
      paths:
      - backend:
          serviceName: k8s-testing-app-javascript
          servicePort: 3000
        path: /fe-search
